Fixed media queries (alignment issue of icons in sections for some breakpoints)

--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,9 @@ section {
             "right";
         grid-column-gap: 20px;
     }
+    .right p, ul {
+        margin-left: 40px;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -295,5 +298,8 @@ section {
             "left" 
             "right";
         grid-column-gap: 20px;
+    }
+    .right p, ul {
+        margin-left: 40px;
     }
 }
